--- a/app/resources/sass/partials/_accordion.scss
+++ b/app/resources/sass/partials/_accordion.scss
@@ -24,8 +24,7 @@
 .accordion-content {
   .settings-list {
     font-size: 0;
-    margin-top: $padding / 2;
-    padding: 0 $padding / 2;
+    padding: $padding / 2 $padding / 2 0;
 
     .settings-option {
       @include inline-block(50%,50px,auto,auto,50px);
